--- a/index.html
+++ b/index.html
@@ -24,41 +24,15 @@
 	<!-- Main -->
 	<div id="main">
 
-		<header class="major container medium">
-			<h1 style="font-size: 30px; text-transform: none"> The Open Economy Initiative </h1>
-			<h2 style="font-size: 20px; text-transform: none"> <em>Thriving local communities utilizing cryptocurrency for commerce </em>
-			</h2>
-			<!--
-					<p>Tellus erat mauris ipsum fermentum<br />
-					etiam vivamus nunc nibh morbi.</p>
-					-->
+		<header class="major container">
+			<h1 style="font-size: 38px; text-transform: none; margin:0"> The Open Economy Initiative </h1>
 		</header>
 
 		<div class="box container">
-			<header>
-				<h2>A lot of generic stuff</h2>
-			</header>
-			<section>
-				<header>
-					<h3>Paragraph</h3>
-					<p>This is the subtitle for this particular heading</p>
-				</header>
-				<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
-					amet risus elit.</p>
-			</section>
-			<section>
-				<header>
-					<h3>Blockquote</h3>
-				</header>
-				<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget.
-					tempus euismod. Vestibulum ante ipsum primis in faucibus.</blockquote>
-			</section>
 			<section>
 				<header>
 					<h3>Our Vision</h3>
-					<p style="text-transform: none"><em>Thriving local communities utilizing cryptocurrency for commerce</em></p>
+					<p style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></p>
 				</header>
 				<p>
 					At The Open Economy Initiative (OpEI), we feel that there are many flaws in the system governing the mainstream economy, and because of these flaws anyone participating in it assumes a large amount of risk. We believe that everyone should
@@ -90,26 +64,28 @@
 				</header>
 				<p>
 					We partner with and foster local communities centered around our shared values. We add value in every way we can to grow, retain, and keep these communities active and engaged. We strive to have familial level of comfort, connectedness, and
-					trust amongst everyone in our network. We move together towards our shared vision.<br>
+					trust amongst everyone in our network. We move together towards our shared vision.
+					<br><br>
 					Our highly curated corporate partners and sponsors share our communities’ values. If we have a great fit, we offer our services that have been designed to take advantage of multiple opportunities within our network to showcase their
-					products and services.<br>
-					The OpEIInitiative enables our partners and sponsors to demonstrate how their services solve relevant challenges facing our industry, as well as share their insights and expertise for the collective good of the Open Economy we all endeavor
+					products and services.
+					<br><br>
+					The OpEI enables our partners and sponsors to demonstrate how their services solve relevant challenges facing our industry, as well as share their insights and expertise for the collective good of the Open Economy we all endeavor
 					to achieve together.
 
+					<header>
+						<a style="text-transform: none" target="_blank" href="The_Open_Economy_Inititive-Partnership-11_20_19.pdf" class="button"><em>Partnership Information</em> </a>
+					</header>
+
 				</p>
-				<hr />
 			</section>
 		</div>
 
 	</div>
 
 	<!-- Footer -->
-	<div id="footer">
-		<div class="container medium">
-
-			<header class="major last">
+	<div id="footer" >
+		<div class="container">
 				<h2 style="text-transform: none">Get In Touch</h2>
-			</header>
 			<a style="text-transform: none" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
 
 			<!-- TODO: get form fields working -->
@@ -147,15 +123,14 @@
 			</section>
 			 -->
 
-			<br><br><br>
+			<br><br>
 
 			<ul class="icons">
 				<li><a href="" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 			</ul>
 
 			<ul class="copyright">
-				<li>&copy; Untitled. All rights reserved.</li>
-				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				<li> &copy; The OPEI LLC. All rights reserved.</li>
 			</ul>
 
 		</div>
