--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	<div id="header">
 		<!-- <span class="logo icon fa-paper-plane"></span> -->
-		<img src="images/OpEI_Logo.png" alt="OpEI_Logo.png" width="600" />
+		<img src="images/OpEI_Logo.png" alt="OpEI_Logo.png" style="max-width:40vw;" />
 	</div>
 
 	<!-- Main -->
@@ -83,9 +83,9 @@
 	</div>
 
 	<!-- Footer -->
-	<div id="footer" >
+	<div id="footer">
 		<div class="container">
-				<h2 style="text-transform: none">Get In Touch</h2>
+			<h2 style="text-transform: none">Get In Touch</h2>
 			<a style="text-transform: none" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
 
 			<!-- TODO: get form fields working -->
