update ogo file, adjust margin/padding

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 <body class="is-preload">
 
 	<!-- Header -->
-	<div id="header">
-		<!-- <span class="logo icon fa-paper-plane"></span> -->
-		<img src="images/OpEI_Logo.png" alt="OpEI_Logo.png" style="max-width:40vw;" />
+	<div id="header" style="padding-top:5vw; padding-bottom:13vw">
+		<span>
+		<img class="icon" src="images/OpEI_Logo.png" alt="OpEI_Logo.png" style="max-width:40vw; z-index:30" />
+		</span>
+		<header class="">
+			<h1 style="text-transform: none; margin:0"> <br><em> The Open Economy Initiative </em></h1>
+		</header>
 	</div>
 
 	<!-- Main -->
 	<div id="main">
 
-		<header class="major container">
-			<h1 style="font-size: 38px; text-transform: none; margin:0"> The Open Economy Initiative </h1>
-		</header>
 
 		<div class="box container">
 			<section>
@@ -84,56 +85,54 @@
 
 	<!-- Footer -->
 	<div id="footer">
-		<div class="container">
-			<h2 style="text-transform: none">Get In Touch</h2>
-			<a style="text-transform: none" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
+		<header class="major container" style="padding:10px">
+			<h2 style="text-transform: none; margin:25px;">Get In Touch</h2>
 
-			<!-- TODO: get form fields working -->
-			<!--
-			<section>
-				<header>
-					<h3>Form</h3>
-				</header>
-				<form method="post" action="#">
-					<div class="row">
-						<div class="col-6 col-12-mobilep">
-							<label for="name">Name</label>
-							<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-						</div>
-						<div class="col-6 col-12-mobilep">
-							<label for="email">Email</label>
-							<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-						</div>
-						<div class="col-12">
-							<label for="subject">Subject</label>
-							<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-						</div>
-						<div class="col-12">
-							<label for="subject">Message</label>
-							<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-						</div>
-						<div class="col-12">
-							<ul class="actions special">
-								<li><input type="submit" value="Send" /></li>
-								<li><input type="reset" value="Reset" class="alt" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-			</section>
-			 -->
+			<a style="text-transform: none; margin-bottom:25px;" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
 
-			<br><br>
-
-			<ul class="icons">
+			<ul class="icons" style="margin:0px;">
 				<li><a href="" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 			</ul>
 
-			<ul class="copyright">
+			<ul class="copyright" style="margin:25px;">
 				<li> &copy; The OPEI LLC. All rights reserved.</li>
 			</ul>
+		</header>
 
-		</div>
+		<!-- TODO: get form fields working -->
+		<!--
+		<section>
+			<header>
+				<h3>Form</h3>
+			</header>
+			<form method="post" action="#">
+				<div class="row">
+					<div class="col-6 col-12-mobilep">
+						<label for="name">Name</label>
+						<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
+					</div>
+					<div class="col-6 col-12-mobilep">
+						<label for="email">Email</label>
+						<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
+					</div>
+					<div class="col-12">
+						<label for="subject">Subject</label>
+						<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
+					</div>
+					<div class="col-12">
+						<label for="subject">Message</label>
+						<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+					</div>
+					<div class="col-12">
+						<ul class="actions special">
+							<li><input type="submit" value="Send" /></li>
+							<li><input type="reset" value="Reset" class="alt" /></li>
+						</ul>
+					</div>
+				</div>
+			</form>
+		</section>
+		 -->
 	</div>
 
 	<!-- Scripts -->
