added application form, udated vison & mission

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- Header -->
 	<div id="header" style="padding-top:5vw; padding-bottom:13vw">
 		<span>
-		<img class="icon" src="images/OpEI_Logo.png" alt="OpEI_Logo.png" style="max-width:40vw; z-index:30" />
+			<img class="icon" src="images/OpEI_Logo.png" alt="OpEI_Logo.png" style="max-width:40vw; z-index:30" />
 		</span>
 		<header class="">
 			<h1 style="text-transform: none; margin:0"> <br><em> The Open Economy Initiative </em></h1>
@@ -30,41 +30,56 @@
 
 
 		<div class="box container">
-			<section>
-				<header>
-					<h3>Our Vision</h3>
-					<p style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></p>
-				</header>
-				<p>
-					At The Open Economy Initiative (OpEI), we feel that there are many flaws in the system governing the mainstream economy, and because of these flaws anyone participating in it assumes a large amount of risk. We believe that everyone should
-					have an alternative system available to provide greater resilience towards large, negative economic events.
-					<br><br>
-					Sound money in a fair, transparent & open source society is something that hasn't been tried before and we believe it may be the best way to conduct an economy - assuming enough people participate.
-				</p>
-				<hr />
-			</section>
 
 			<section>
 				<header>
-					<h3>Our Mission</h3>
+					<h2>Our Vision</h2>
+					<p style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></p>
+				</header>
+				<p>
+					At The Open Economy Initiative (OpEI), we observe systemic problems in the world economies that threaten all of us. New systems that empower the individual to break free into a new and <em>open economy</em> are being
+					developed using <b>Cryptocurrency</b>. We envision a future where everyone has the ability to use these powerful tools to increase their personal liberty and sovereignty.
+				</p>
+			</section>
+
+			<hr>
+
+			<section>
+				<header>
+					<h2>Our Mission</h2>
 					<p style="text-transform: none"><em>Evangelism, Advocacy, and Education of cryptocurrency based financial tools
 						</em></p>
 				</header>
 				<p>
-					The OpEI is dedicated to the empowerment of local businesses and individuals safely, securely and confidently to conduct commerce. We work hard to ensure that all our efforts deliver the best possible value to anyone interested in learning
-					about and then harnessing cryptocurrencies and blockchain technologies.
+					The OpEI is dedicated to the empowerment of local businesses and individuals safely, securely and confidently to conduct commerce. We work to foster <b>cryptocurrency commerce</b> both locally and globally by harnessing and promoting the
+					best-in-class tools and techniques.
 				</p>
-				<hr />
 			</section>
+
+			<div class="box container" style="width:33em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
+				<section>
+					<header>
+						<h2 style="text-transform: none; color:white;">Join the OpEI</h2>
+					</header>
+					<p style="text-align:center; color:white;">
+						We offer <em>Educational Courses</em> to help you use cryptocurrency.
+						<br>
+						<b style="color:white;">We humbly ask you to apply:</b>
+					</p>
+					<header style="margin-bottom:20px;">
+						<a style="text-transform: none;" target="_blank" href="https://forms.gle/gSwTfHmXkXAzpVZy5" class="button"><em>Application Form</em> </a>
+					</header>
+				</section>
+			</div>
 
 			<section>
 				<header>
-					<h3>How We Succeed</h3>
+					<h2>How We Succeed</h2>
 					<p style="text-transform: none"><em>Working with the absolute best-in-class companies and communities
 						</em></p>
 				</header>
 				<p>
-					We partner with and foster local communities centered around our shared values. We add value in every way we can to grow, retain, and keep these communities active and engaged. We strive to have familial level of comfort, connectedness, and
+					We partner with and foster local communities centered around our shared values. We add value in every way we can to grow, retain, and keep these communities active and engaged. We strive to have familial level of comfort, contentedness, and
 					trust amongst everyone in our network. We move together towards our shared vision.
 					<br><br>
 					Our highly curated corporate partners and sponsors share our communities’ values. If we have a great fit, we offer our services that have been designed to take advantage of multiple opportunities within our network to showcase their
@@ -76,7 +91,7 @@
 					<header>
 						<a style="text-transform: none" target="_blank" href="The_Open_Economy_Inititive-Partnership-11_20_19.pdf" class="button"><em>Partnership Information</em> </a>
 					</header>
-
+					<section>
 				</p>
 			</section>
 		</div>
@@ -103,7 +118,7 @@
 		<!--
 		<section>
 			<header>
-				<h3>Form</h3>
+				<h2>Form</h2>
 			</header>
 			<form method="post" action="#">
 				<div class="row">
