add icons and meta data

--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE HTML>
-<!--
-	Directive by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
 	<title>The Open Economy Initiative</title>
 	<meta charset="utf-8" />
+
+	<meta name="description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
+	<meta name="keywords" content="Open, Economy,OpEI, Cryptocurrency, Learning, Empowerment, Liberty, Education, Workshops, Classes">
+	<meta name="author" content="The OpEI">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+	<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="icons/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="icons/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="icons/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="icons/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+	<link rel="manifest" href="icons/manifest.json">
+	<meta name="msapplication-TileColor" content="#392e3c">
+	<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
+	<meta name="theme-color" content="#392e3c">
+
+	<meta name="revisit-after" content="30 days">
+	<meta name="distribution" content="web">
+
+	<meta name="robots" content="index,follow">
+
 	<link rel="stylesheet" href="assets/css/main.css" />
+
 </head>
 
 <body class="is-preload">
@@ -51,8 +75,8 @@
 						</em></p>
 				</header>
 				<p>
-					The OpEI is dedicated to the empowerment of local businesses and individuals safely, securely and confidently to conduct commerce. We work to foster <b>cryptocurrency commerce</b> both locally and globally by harnessing and promoting the
-					best-in-class tools and techniques.
+					The OpEI is dedicated to the empowerment of businesses and individuals safely, securely, and confidently to conduct <b>cryptocurrency commerce</b>. We work to foster communities both locally and globally by harnessing and promoting the
+					best-in-class industry tools and techniques.
 				</p>
 			</section>
 
