--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<section>
 				<header>
 					<h2>Our Vision</h2>
-					<p style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></p>
+					<h3 style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></h3>
 				</header>
 				<p>
 					At The Open Economy Initiative (OpEI), we observe systemic problems in the world economies that threaten all of us. New systems that empower the individual to break free into a new and <em>open economy</em> are being
@@ -71,8 +71,8 @@
 			<section>
 				<header>
 					<h2>Our Mission</h2>
-					<p style="text-transform: none"><em>Evangelism, Advocacy, and Education of cryptocurrency based financial tools
-						</em></p>
+					<h3 style="text-transform: none"><em>Evangelism, Advocacy, and Education of cryptocurrency based financial tools
+					</em></h3>
 				</header>
 				<p>
 					The OpEI is dedicated to the empowerment of businesses and individuals safely, securely, and confidently to conduct <b>cryptocurrency commerce</b>. We work to foster communities both locally and globally by harnessing and promoting the
@@ -82,7 +82,7 @@
 
 			<hr>
 
-			<div class="box container" style="width:33em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
+			<div class="box container" style="width:40em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
 				<section>
 					<header>
 						<h2 style="text-transform: none; color:white;">Join the OpEI</h2>
@@ -103,8 +103,8 @@
 			<section>
 				<header>
 					<h2>How We Succeed</h2>
-					<p style="text-transform: none"><em>Working with the absolute best-in-class companies and communities
-						</em></p>
+					<h3 style="text-transform: none"><em>Working with the absolute best-in-class companies and communities
+						</em></h3>
 				</header>
 				<p>
 					We partner with and foster local communities centered around our shared values. We add value in every way we can to grow, retain, and keep these communities active and engaged. We strive to have familial level of comfort, contentedness, and
@@ -127,8 +127,8 @@
 	</div>
 
 	<!-- Footer -->
-	<div id="footer">
-		<header class="major container" style="padding:10px">
+	<div id="footer" style="padding-bottom: 35px;">
+		<header class="major container" style="margin-bottom:0px">
 			<h2 style="text-transform: none; margin:25px;">Get In Touch</h2>
 
 			<a style="text-transform: none; margin-bottom:25px;" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
@@ -141,41 +141,6 @@
 				<li> &copy; The OPEI LLC. All rights reserved.</li>
 			</ul>
 		</header>
-
-		<!-- TODO: get form fields working -->
-		<!--
-		<section>
-			<header>
-				<h2>Form</h2>
-			</header>
-			<form method="post" action="#">
-				<div class="row">
-					<div class="col-6 col-12-mobilep">
-						<label for="name">Name</label>
-						<input class="text" type="text" name="name" id="name" value="" placeholder="John Doe" />
-					</div>
-					<div class="col-6 col-12-mobilep">
-						<label for="email">Email</label>
-						<input class="text" type="text" name="email" id="email" value="" placeholder="johndoe@domain.tld" />
-					</div>
-					<div class="col-12">
-						<label for="subject">Subject</label>
-						<input class="text" type="text" name="subject" id="subject" value="" placeholder="Enter your subject" />
-					</div>
-					<div class="col-12">
-						<label for="subject">Message</label>
-						<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-					</div>
-					<div class="col-12">
-						<ul class="actions special">
-							<li><input type="submit" value="Send" /></li>
-							<li><input type="reset" value="Reset" class="alt" /></li>
-						</ul>
-					</div>
-				</div>
-			</form>
-		</section>
-		 -->
 	</div>
 
 	<!-- Scripts -->
