--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 	<!-- Footer -->
 	<div id="footer" style="padding-bottom: 35px;">
 		<header class="major container" style="margin-bottom:0px">
-			<h2 style="text-transform: none; margin:25px;">Get In Touch</h2>
+			<h2 style="text-transform: none; margin-bottom:25px;">Get In Touch</h2>
 
 			<a style="text-transform: none; margin-bottom:25px;" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
 
@@ -137,7 +137,7 @@
 				<li><a href="" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 			</ul>
 
-			<ul class="copyright" style="margin:25px;">
+			<ul class="copyright" style="margin:25px 0px 0px 0px;">
 				<li> &copy; The OPEI LLC. All rights reserved.</li>
 			</ul>
 		</header>
