--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<div id="main">
 
 
-		<div class="box container">
+		<div class="box container" style="padding-bottom: 0px;">
 
 			<section>
 				<header>
