add preview card image

--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 
 <head>
 	<title>The Open Economy Initiative</title>
+
+	<!-- Primary Meta Tags -->
+	<title>The Open Economy Initiative</title>
+	<meta name="title" content="The Open Economy Initiative">
+	<meta name="description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
 	<meta charset="utf-8" />
 
-	<meta name="description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
 	<meta name="keywords" content="Open, Economy,OpEI, Cryptocurrency, Learning, Empowerment, Liberty, Education, Workshops, Classes">
 	<meta name="author" content="The OpEI">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://theopei.com/">
+	<meta property="og:title" content="The Open Economy Initiative">
+	<meta property="og:description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
+	<meta property="og:image" content="images/OpEI_card.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://theopei.com/">
+	<meta property="twitter:title" content="The Open Economy Initiative">
+	<meta property="twitter:description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
+	<meta property="twitter:image" content="images/OpEI_card.png">
+
+	<!-- Icons -->
 	<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="icons/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="icons/apple-icon-72x72.png">
@@ -28,11 +47,7 @@
 	<meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#392e3c">
 
-	<meta name="revisit-after" content="30 days">
-	<meta name="distribution" content="web">
-
-	<meta name="robots" content="index,follow">
-
+	<!-- Style -->
 	<link rel="stylesheet" href="assets/css/main.css" />
 
 </head>
@@ -72,7 +87,7 @@
 				<header>
 					<h2>Our Mission</h2>
 					<h3 style="text-transform: none"><em>Evangelism, Advocacy, and Education of cryptocurrency based financial tools
-					</em></h3>
+						</em></h3>
 				</header>
 				<p>
 					The OpEI is dedicated to the empowerment of businesses and individuals safely, securely, and confidently to conduct <b>cryptocurrency commerce</b>. We work to foster communities both locally and globally by harnessing and promoting the
