--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 
 <head>
-	<title>The Open Economy Initiative</title>
-
 	<!-- Primary Meta Tags -->
-	<title>The Open Economy Initiative</title>
+	<title>The Open Economy Initiative: OpEI</title>
 	<meta name="title" content="The Open Economy Initiative">
 	<meta name="description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
 	<meta charset="utf-8" />
