--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<meta property="og:url" content="https://theopei.com/">
 	<meta property="og:title" content="The Open Economy Initiative">
 	<meta property="og:description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
-	<meta property="og:image" content="images/OpEI_card.png">
+	<meta property="og:image" content="https://theopei.com/images/OpEI_card.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://theopei.com/">
 	<meta property="twitter:title" content="The Open Economy Initiative">
 	<meta property="twitter:description" content="The Open Economy Initiative is dedicated to fostering cryptocurrency commerce locally and globally.">
-	<meta property="twitter:image" content="images/OpEI_card.png">
+	<meta property="twitter:image" content="https://theopei.com/images/OpEI_card.png">
 
 	<!-- Icons -->
 	<link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
