--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			<a style="text-transform: none; margin-bottom:25px;" href="mailto:hello@theopei.com" class="button"><em>hello@theOpEI.com</em> </a>
 
 			<ul class="icons" style="margin:0px;">
-				<li><a href="" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="https://twitter.com/The_OpEI" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 			</ul>
 
 			<ul class="copyright" style="margin:25px 0px 0px 0px;">
