update apply box

--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
 
 			<hr>
 
-			<div class="box container" style="width:40em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
+			<div class="box container" style="width:44em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
 				<section>
 					<header>
-						<h2 style="text-transform: none; color:white;">Join the OpEI</h2>
+						<h2 style="text-transform: none; color:white;">Apply for an OpEI Course</h2>
 					</header>
 					<p style="text-align:center; color:white;">
-						We offer <em>Educational Courses</em> to help you use cryptocurrency.
+						We offer <em>Educational Courses</em> to help you manage cryptocurrency.
 						<br>
-						<b style="color:white;">We humbly ask you to apply:</b>
+						<b style="color:white;">Apply today:</b>
 					</p>
 					<header style="margin-bottom:20px;">
-						<a style="text-transform: none;" target="_blank" href="https://forms.gle/gSwTfHmXkXAzpVZy5" class="button"><em>Application Form</em> </a>
+						<a style="text-transform: none;" target="_blank" href="https://forms.gle/gSwTfHmXkXAzpVZy5" class="button"><em>Registration Form</em> </a>
 					</header>
 				</section>
 			</div>
