--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 			<ul class="icons" style="margin:0px;">
 				<li><a target="_blank" href="https://twitter.com/The_OpEI" class="icon brands fa-twitter"><span class="label">Twitter</span></a> </li>
 				<li><a target="_blank" href="https://www.linkedin.com/company/open-economy-initiative-opei" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a target="_blank" href="https://keybase.io/team/opei" class="icon brands fa-keybase"><span class="label">LinkedIn</span></a></li>
 			</ul>
 
 			<ul class="copyright" style="margin:25px 0px 0px 0px;">
