--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 						<h2 style="text-transform: none; color:white;">Apply for an OpEI Course</h2>
 					</header>
 					<p style="text-align:center; color:white;">
-						We offer <em>Educational Courses</em> to help you manage cryptocurrency.
+						Educational Courses on Cryptocurrency Managment.
 						<br>
-						<b style="color:white;">Apply today:</b>
+						<b style="color:white;">Apply Today:</b>
 					</p>
 					<header style="margin-bottom:20px;">
-						<a style="text-transform: none;" target="_blank" href="https://forms.gle/gSwTfHmXkXAzpVZy5" class="button"><em>Registration Form</em> </a>
+						<a style="text-transform: none;" target="_blank" href="https://forms.gle/sWsYDFRNExy3Znpw6" class="button"><em>Registration Form</em> </a>
 					</header>
 				</section>
 			</div>
