added form updated vision

--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
 					<h3 style="text-transform: none"><em>Thriving local communities utilizing <br> cryptocurrency for commerce</em></h3>
 				</header>
 				<p>
-					At The Open Economy Initiative (OpEI), we observe systemic problems in the world economies that threaten all of us. New systems that empower the individual to break free into a new and <em>open economy</em> are being
-					developed using <b>Cryptocurrency</b>. We envision a future where everyone has the ability to use these powerful tools to increase their personal liberty and sovereignty.
+					At The Open Economy Initiative (OpEI), we observe systemic problems in the world economies that threaten all of us. New systems that empower the individual to break free into a new and <em>open economy</em> are being developed using
+					<b>Cryptocurrency</b>.
+					<br><br>
+					We envision a future where international transactions are near instantaneous, transfer fees are minuscule, and money can not be censored or manipulated by a 3rd-party. A world where financial authorities and institutions must (by code, not
+					just law) submit to rules that everyone participating in the economy agree to. A world where your savings can not be devalued by creation of money out of thin air. A world where everyone has the ability to leverage innovative technology and
+					increase their personal liberty and sovereignty.
 				</p>
 			</section>
 
@@ -95,7 +99,7 @@
 
 			<hr>
 
-			<div class="box container" style="width:44em; border-color:#c0ab82; border-width: 3.5px; margin-bottom:25px; background:#392e3c;">
+			<div class="box container" style="width:44em; border-color:#c0ab82; border-width: 5px; margin-bottom:25px; background:#392e3c;">
 				<section>
 					<header>
 						<h2 style="text-transform: none; color:white;">Apply for an OpEI Course</h2>
@@ -103,13 +107,42 @@
 					<p style="text-align:center; color:white;">
 						Educational Courses on Cryptocurrency Managment.
 						<br>
-						<b style="color:white;">Apply Today:</b>
+						<b style="color:white;"><em>Apply Today:</em></b>
 					</p>
-					<header style="margin-bottom:20px;">
-						<a style="text-transform: none;" target="_blank" href="https://forms.gle/sWsYDFRNExy3Znpw6" class="button"><em>Registration Form</em> </a>
+					<header>
+						<a style="text-transform: none; background-color:#c0ab82" target="_blank" href="https://forms.gle/sWsYDFRNExy3Znpw6" class="button"><em>Registration Form</em> </a>
 					</header>
 				</section>
 			</div>
+
+			<hr>
+
+			<section>
+				<div class="box container" style="width:44em; border-color:#c0ab82; border-width: 5px; margin-bottom:25px; background:#392e3c;">
+					<header>
+						<h2 style="text-transform: none; color:white;">Become and OpEI Insider</h2>
+					</header>
+					<p style="text-align:center; color:white;">
+						<em>Get Excited about your inbox again</em>
+					</p>
+					<form action="https://formsubmit.co/hello@theopei.com" method="POST">
+						<div class="row" style="justify-content:center; align-items: center; margin:0;">
+
+							<input class="col-5" style="color:white; min-width:200px" type="text" name="name" placeholder="Your Name" required>
+							<input class="col-5" style="color:white; min-width:250px" type="email" name="email" placeholder="Email Address" required>
+
+							<div class="col-12" style="padding:10px"></div>
+
+							<textarea class="col-10" style="color:white;" placeholder="Anything you want to let us know? (Optional)" class="form-control" name="message" rows="5"></textarea>
+
+							<div class="col-12" style="padding:10px"></div>
+
+							<button class="button col-7" style="text-transform: none; background-color:#c0ab82" type="submit" class="btn btn-lg btn-dark btn-block"><em>Sign Me Up!</em></button>
+						</div>
+					</form>
+
+				</div>
+			</section>
 
 			<hr>
 
@@ -132,7 +165,6 @@
 					<header>
 						<a style="text-transform: none" target="_blank" href="The_Open_Economy_Inititive-Partnership-11_20_19.pdf" class="button"><em>Partnership Information</em> </a>
 					</header>
-					<section>
 				</p>
 			</section>
 		</div>
