getform.io integration

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<p style="text-align:center; color:white;">
 						<em>Get Excited about your inbox again</em>
 					</p>
-					<form action="https://formsubmit.co/hello@theopei.com" method="POST">
+					<form action="https://getform.io/f/0705e41b-a678-4748-8a86-e53d1d69803f" method="POST">
 						<div class="row" style="justify-content:center; align-items: center; margin:0;">
 
 							<input class="col-5" style="color:white; min-width:200px" type="text" name="name" placeholder="Your Name" required>
