--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<section>
 				<div class="box container" style="width:44em; border-color:#c0ab82; border-width: 5px; margin-bottom:25px; background:#392e3c;">
 					<header>
-						<h2 style="text-transform: none; color:white;">Become and OpEI Insider</h2>
+						<h2 style="text-transform: none; color:white;">Become an OpEI Insider</h2>
 					</header>
 					<p style="text-align:center; color:white;">
 						<em>Get Excited about your inbox again</em>
